<resources>
    <string name="app_name">InMotion</string>
    <string name="app_version">1.0.0.0</string>
    <string name="app_name_titles">INMOTION</string>
    <string name="toolbar_title">Producto terminado</string>
    <string name="action_settings">Settings</string>
    <string name="txtEmpresa">AUTOMATICA TECHNOLOGIES</string>
    <string name="txtUsuario"> Usuario:</string>
    <string name="txtContraseña">Contraseña:</string>
    <string name="txt_titulo_menu_princial">Menu principal</string>
    <string name="txt_titulo_registro_llegada">registro de mercancía nueva</string>
    <string name="contraseña_preferencias">1269</string>
    <string name="txt_pref_numero_handheld">Número de estación</string>
    <string name="txt_pref_licencia">Licencia de InMotion</string>
    <string name="txt_pref_web_service">Web service</string>
    <string name="txt_pref_titulo">Opciones de InMotion</string>
    <string name="txt_usuario">Usuario (no modificar)</string>
    <string name="txt_apertura">Apertura(no modificar)</string>
    <string name="TitIngresarDatos">Estamos casi listos para iniciar.</string>
    <string name="DescIngresarDatos">Registra la información proporcionada por el personal de AUTOMATICA TECHNOLOGIES.</string>
    <string name="txt_informacion_disp">Información de este dispositivo</string>
    <string name="txt_acerca_disp">Acerca de este dispositivo</string>
    <string name="txt_ip">Dirección IP:</string>
    <string name="txt_estación">Estación:</string>
    <string name="txt_version_app">Versión de la aplicación:</string>
    <string name="app_settings">Ajustes</string>
    <string name="title_activity_prueba_soap">prueba_soap</string>
    <string name="title_activity_listview">listview</string>
    <string name="advertencia">Advertencia</string>
    <string name="escanear_Pallet">Capturar pallet</string>
    <string name="volver_escanear_Pallet">Verificar pallet</string>
    <string name="escanear_empaque">Capturar empaque</string>
    <string name="escanear_numSerie">Capturar num. serie</string>
    <string name="escanear_contenedor">Capturar contenedor</string>
    <string name="primer_empaque">Capturar primer empaque</string>
    <string name="txt_primer_empaque">Primer empaque</string>
    <string name="txt_ultimo_empaque">Último empaque</string>
    <string name="ultimo_empaque">Capturar último empaque</string>
    <string name="volver_escanear_empaque">Verificar empaque</string>
    <string name="escanear_posicion">Capturar posición</string>
    <string name="volver_escanear_posicion">Verificar posición</string>
    <string name="escanear_linea">Capturar <anden>  </anden></string>
    <string name="volver_escanear_linea">Verificar línea</string>
    <string name="escanear_ubicacion">Capturar ubicación</string>
    <string name="volver_escanear_ubicacion">Verificar ubicación</string>
    <string name="capturar_cantidad_empaque">Capturar empaques</string>
    <string name="capturar_cantidad_pieza">Capturar cantidad</string>
    <string name="capturar_cantidad_pallet">Capturar pallets</string>
    <string name="capturar_posicion">Capturar posición</string>
    <string name="capturar_cantidad_por_empaque">Capt. Empaques por pallet</string>
    <string name="txt_empaque_pallet">Empaques por pallet</string>
    <string name="capturar_busqueda">Capturar búsqueda</string>
    <string name="unidades"></string>
    <string name="ingresar_factura">Ingresar una factura.</string>
    <string name="volver_ingresar_factura">Volver a ingresar factura.</string>
    <string name="capturar_producto">Capturar artículo</string>
    <string name="capturar_num_parte">Capturar artículo</string>
    <string name="capturar_orden_salida">Capturar orden de salida</string>
    <string name="ingresar_dato">Ingresar dato</string>
    <string name="capturar_orden_produccion">Capturar orden de producción</string>
    <string name="capturar_lote_producto">Capturar lote</string>
    <string name="capturar_revision">Capturar revisión</string>
    <string name="estatico_pallet"></string>
    <string name="estatico_lote">Lote</string>
    <string name="estatico_empaque"></string>
    <string name="estatico_cantidad"></string>
    <string name="estatico_estatus">Estatus</string>
    <string name="estatico_contenido"></string>
    <string name="estatico_producto">Producto</string>
    <string name="estatico_referencia"></string>
    <string name="estatico_orden_compra">Orden de compra</string>
    <string name="estatico_orden_produccion">Orden de producción</string>
    <string name="estatico_pedido">Orden de pedido</string>
    <string name="capturar_orden_surtido">Capturar orden de surtido</string>
    <string name="verificar_orden_surtido">Verificar la orden de surtido</string>
    <string name="Surtido_Rechazado1">Pallet rechazado, los productos surtidos para el documento han sido liberados para ser tomados de nuevo.</string>
    <string name="Surtido_Rechazado2">(NOTA: para volver a surtir el pallet rechazado, deberá colocarlo)</string>
    <string name="pedido">Pedido:</string>
    <string name="capturar_orden_compra">Capturar órden de compra</string>
    <string name="seleccionar_orden_compra">Órden de Compra</string>
    <string name="registrar_sobrante">Registrar sobrante</string>
    <string name="editar">Editar</string>
    <string name="menu_principal">Menú principal</string>
    <string name="menu_almacen"> Almacén</string>
    <string name="menu_consultas"> Consultas</string>
    <string name="menu_embarques"> Surtido</string>
    <string name="menu_inventarios"> Inventarios</string>
    <string name="menu_recepcion"> Recepción</string>
    <string name="menu_pegado_etiquetas"> Pegado de etiquetas</string>
    <string name="menu_validacion">Validación</string>
    <string name="menu_validacion_calidad">Validación</string>
    <string name="menu_validacion_ingreso">Validación</string>
    <string name="menu_conteo">Conteo</string>
    <string name="menu_reabastimiento">Reabastecimiento</string>
    <string name="menu_colocacion">Colocación</string>
    <string name="menu_reubicacion">Reubicación</string>
    <string name="menu_camb_etiquetas">Cambio de etiquetas</string>
    <string name="menu_mov_misc">Movimientos misceláneos</string>
    <string name="menu_mov_misc_entradas">Entradas misceláneas</string>
    <string name="menu_mov_misc_salidas">Salidas misceláneas</string>
    <string name="menu_cuarentena">Cuarentena</string>
    <string name="menu_reempaque">Reempaque</string>
    <string name="menu_cancelacion">Cancelación</string>
    <string name="menu_inventario_posicion">Inventario por posición</string>
    <string name="menu_inventario_articulo">Inventario por artículo</string>
    <string name="menu_inventario_físico">Físico total</string>
    <string name="recepcion_articulos">Recepción de artículos</string>
    <string name="surtido_articulos">Surtido de artículos</string>
    <string name="ejercicio_inventarios">Ejercicios de inventarios</string>
    <string name="seleccione_documento">Seleccione un documento</string>
    <string name="Colocar">Colocar</string>
    <string name="Reubicar">Reubicar</string>
    <string name="Ajustes">Ajustes</string>
    <string name="misc_entradas">Entradas</string>
    <string name="misc_salidas">Salidas</string>
    <string name="Ajustes_nuevo_pallet">Nuevo pallet</string>
    <string name="Ajustes_nuevo_empaque">Nuevo empaque</string>
    <string name="Ajustes_nuevo_contenedor">Nuevo contenedor</string>
    <string name="Ajustes_Baja_Empaque">Baja empaque</string>
    <string name="Ajustes_Baja_Pallet">Baja pallet</string>
    <string name="Ajustes_etiquetados">Etiquetados</string>
    <string name="Ajustes_ne">No etiquetados</string>
    <string name="devolucion_proveedor">Devolución a proveedor</string>
    <string name="devolucion_linea">Devolución línea</string>
    <string name="devolucion_proveedor_pallet">Devolución pallet</string>
    <string name="devolucion_proveedor_empaque">Devolución empaque</string>
    <string name="devolucion_proveedor_paquete">Devolución empaque/Piezas</string>
    <string name="registro_pallets_produccion">Registro de pallets</string>
    <string name="registro_pallets_produccion_sobrante">Registro de sobrante</string>
    <string name="almacen_armado_tarimas">Armado de tarimas</string>
    <string name="almacen_armado_tarimas_cant_modificable">Armado de tarimas</string>
    <string name="almacen_armado_tarimas_PyU">Armado tarimas Pr. y Ult.</string>
    <string name="almacen_armado_tarimas_NE">Armado tarimas NE.</string>
    <string name="devolucion_empaque">Devolución de Empaques</string>
    <string name="devolucion_pallets">Devolución de pallets</string>
    <string name="devolucion_seleccion_documento">Selección de documento</string>
    <string name="devolucion">Devolución a proveedor</string>
    <string name="cuarentena_pallet">Pallet</string>
    <string name="cuarentena_empaque">Empaque</string>
    <string name="cuarentena_recuperar">Recuperar</string>
    <string name="cuarentena_baja">Baja</string>
    <string name="recepcion_bascula">Báscula</string>
    <string name="recepcion_surtido_entrega">Entrega</string>
    <string name="recepcion_OC">Recepción OC</string>
    <string name="recepcion_transferenia">Transferencia</string>
    <string name="recepcion_envio_maquila">Envío de maquila</string>
    <string name="Consolidacion">Consolidación</string>
    <string name="Consolidado">Consolidado</string>
    <string name="sku_o_empaque">SKU O Empaque</string>
    <string name="Transferencia">Traspaso</string>
    <string name="almacen_traspaso_env">Envío traspaso</string>
    <string name="almacen_traspaso_rec">Recibo traspaso</string>
    <string name="almacen_traspaso">Traspaso</string>
    <string name="Registro_Pallets_Produccion">Registro producción</string>
    <string name="pregunta_cierre_orden_produccion">No registro un sobrante, ¿desea hacerlo?</string>
    <string name="pregunta_cierre_orden">"¿Cerrar orden?"</string>
    <string name="pregunta_cierre_pallet">"¿Cerrar pallet?"</string>
    <string name="pregunta_rechazo_pallet">"¿Rechazar pallet?"</string>
    <string name="pregunta_validar_pallet">"¿Validar pallet?"</string>
    <string name="Transferencia_Envio">Envío</string>
    <string name="Transferencia_Envio_Pallet">Envío pallet</string>
    <string name="Transferencia_Envio_Pallet_NE">Envío pallet Sin Etiquetas</string>
    <string name="Transferencia_Envio_Empaque">Envío empaque</string>
    <string name="Transferencia_Recibo">Recibo</string>
    <string name="Transferencia_Recibo_Pallet">Recibo pallet</string>
    <string name="Transferencia_Recibo_Empaque">Recibo empaque</string>
    <string name="Cuarentena">Cuarentena</string>
    <string name="Consultas_Posicion">Posición</string>
    <string name="Consultas_Pallet">Pallet</string>
    <string name="Consultas_Empaque">Empaque</string>
    <string name="Consultas_Referencia">Referencia</string>
    <string name="Consultas_Existencias">Existencias</string>
    <string name="Embarques_Precarga">Precarga</string>
    <string name="Embarques_Precarga_Pallet">Precarga pallet</string>
    <string name="Embarques_Surtido">Surtido</string>
    <string name="Embarques_Surtido_docificacion">Dosificado producción</string>
    <string name="Embarques_Surtido_Entrega">Entrega surtido</string>
    <string name="Embarques_Surtido_tipo_surtido">Tipo de surtido</string>
    <string name="Embarques_Surtido_Orden_Surtido">Órden de surtido</string>
    <string name="Embarques_Surtido_unidad">Surtido unidad</string>
    <string name="Embarques_Surtido_empaque">Surtido empaque</string>
    <string name="Embarques_Surtido_pallet">Surtido pallet</string>
    <string name="Embarques_Surtido_partida">Surtido partida</string>
    <string name="ingrese_cantidad">Ingrese una cantidad</string>
    <string name="capturar_caducidad">Capturar fecha caducidad</string>
</resources>