<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAzul"
    tools:context=".c_ArmadoPalletsRegProduccion.Almacen_Registro_Pallets_Produccion.Almacen_Registro_Pallets_Produccion">

    <EditText
        android:id="@+id/edtx_Empaque"
        style="@style/Estilo_EditText_Reg"
        android:layout_width="0dp"
        android:layout_height="31dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/ingrese_cantidad"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout6" />

    <EditText
        android:id="@+id/edtx_FechaCad"
        style="@style/Estilo_EditText_Reg"
        android:layout_width="0dp"
        android:layout_height="31dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:focusedByDefault="false"
        android:hint="@string/capturar_caducidad"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="@+id/textView89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView89" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout6"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/orilla_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView81">

        <TextView

            android:id="@+id/txtv_Sobrante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="11dp"
            android:text="-"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"

            android:text="Sobrante"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"

            android:text="Producto"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:text="Cantidad total "
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"

            android:text="Cantidad reg."
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:text="Lote"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <TextView

            android:id="@+id/txtv_Prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="-"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/txtv_Lote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="-"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView

            android:id="@+id/txtv_CantidadTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="-"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/txtv_Prod" />

        <TextView

            android:id="@+id/txtv_CantidadRegistrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="11dp"
            android:text="-"
            android:textColor="@color/blancoLetraStd"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/txtv_CantidadTotal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:text="Orden de\nProducción"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Producido"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout6" />

    <TextView
        android:id="@+id/textView89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="fecha de\nElaboración"
        android:textColor="@color/blancoLetraStd"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/edtx_Cantidad"
        style="@style/Estilo_EditText_Reg"
        android:layout_width="0dp"
        android:layout_height="31dp"

        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/estatico_orden_produccion"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView81"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_CerrarOrden"
        style="@style/Estilo_Boton_Reg"
        android:layout_width="155dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="10dp"
        android:text="Cerrar\nOrden"
        app:layout_constraintEnd_toStartOf="@+id/btn_Sobrante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtx_FechaCad" />

    <Button
        android:id="@+id/btn_Sobrante"
        style="@style/Estilo_Boton_Reg"
        android:layout_width="155dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="9dp"
        android:text="Registrar\nsobrante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_CerrarOrden"
        app:layout_constraintTop_toBottomOf="@+id/edtx_FechaCad" />


</androidx.constraintlayout.widget.ConstraintLayout>
